# cmake3

./: .gitignore  .gitmodules  README.md
somelibDemo/cpp/: CMakeLists.txt  adder.cpp  adder.h
testsome/cpp/: CMakeLists.txt  configure.sh  main.cpp  run.sh
